# tropico5-hpk-unpacker

./: Cargo.toml  hpk_file_format.txt  hpk_zlib_format.txt
src/: hpk.rs  main.rs
